* SVN *

* dont bomb out on comment events without an event body

* fix bug where you're unable to delete an empty comment

* Ignore drafts and articles published in the future when searching.

* sanitize posted comments

* Fix bug where atom feed content from textile was double encoded

* sanitize atom feed content

* 0.6 *

* Change conversion scripts to use Mephisto.convert_from instead:

  Mephisto.convert_from :typo

* Added spinner graphic for asset searches from article page

* Added link to the public homepage

* Added spinner graphics for search request in assets area

* Added icons for video, audio, and other docs

* [CHANGED] Changed {{ article.body }} and added {{ article.content }}

  * {{ article.body }} is now always the article's body, regardless of what template is currently being rendered.
  * {{ article.content }} tries to be a little smart.  On sections with multiple articles, it shows the excerpt, or the body if the excerpt is missing.
  Single article templates show the body.

* [NEW] Added {{ article.excerpt }} liquid tag for accessing an articles excerpt.

* Change - Article#body_for_mode only returns the body, not excerpt + body.  This means you'll have to do this in your templates
if you want to show both:

  {{ article.excerpt }}
  {{ article.body }}

* Activated Assets with searching and tagging.

* Store filters as a single string field, remove the Serialize hacks.

* Bye bye PageNavigation block.

  Change this:

    {% pagenavigation %}
      <li>{{ page.link }}</li>
    {% endpagenavigation %}
  
  to:

    {% for page in pages %}
    <li>{{ page | link_to_page }}</li>
    {% endfor %}

* Enhance the site host validations so it requires a valid domain name.

* Add basic asset support [Justin, Rick]

* fix user fixtures [Cristi Balan]

* Add windows binary file support to acts as attachment [Cristi Balan]

* escape HTML entered for comment author/url fields [Cristi Balan]

* add category tags to the atom feed [Cristi Balan]
